Bug 157138 - Can't switch from Use Background to None area fill in the Area dialog
Summary: Can't switch from Use Background to None area fill in the Area dialog
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
7.4.3.2 release
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Julien Nabet
URL:
Whiteboard: target:24.2.0 target:7.6.2 target:7.5.7
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Area-Fill-Tab
  Show dependency treegraph
 
Reported: 2023-09-07 13:29 UTC by stragu
Modified: 2023-09-12 09:15 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stragu 2023-09-07 13:29:25 UTC
Steps:
1. Open attachment 189415 [details]
2. Select shape on the left
3. Context menu > Area... > Area tab
4. Switch to "None", press OK

Result: still uses "Use Background". Reopening the dialog confirms that. Switching to "None" works in the sidebar. Same if saved as PPTX.

Reprod in recent master build:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 9a37652b79001bf5208841b9221dee851b9b6d0f
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded

Same with gen/x11 VCL plugin.

It used to work in 7.4 at c723398b879bc0733642854913470bcb6275ae17.

Bibisected with linux-64-7.4 repo to first bad commit 1810a5563aa1e1980bb1fcb5c16b0a51f9efced1 which points to core commit 24b641a026d6f99d8f287aabc0a830f37b25888d which is a cherrypick of:

commit 07aa8138db9bbaf222f2b7cea12a9f7d0a8192d7
author	Julien Nabet	Sun Oct 02 19:51:01 2022 +0200
committer	Noel Grandin 	Mon Oct 03 15:56:33 2022 +0200
tdf#151260: crash in SfxItemPool::SetDefaults (reportdesign/ReportController)
+ deal with the case when there's no XATTR_FILLUSESLIDEBACKGROUND (like here)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/140894

Julien, can you please have a look?
Copying Samuel in too to make sure the feature works as it should.
Comment 1 Julien Nabet 2023-09-07 14:38:02 UTC
On pc Debian x86-64 with master sources updated today, I could reproduce this.

I've submitted the patch here:
https://gerrit.libreoffice.org/c/core/+/156669

I must recognize, I don't remember why I put this if block.
I mean, removing it fixes this bugtracker and no crash for tdf#151260.
Comment 2 Commit Notification 2023-09-08 11:27:04 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/b69e14038288387b5f288a06821fb5df66dcf94e

tdf#157138: Can't switch from Use Background to None area fill

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Julien Nabet 2023-09-08 11:41:24 UTC
cherry-pick for 7.6 branch waiting for review here:
https://gerrit.libreoffice.org/c/core/+/156733
Comment 4 Commit Notification 2023-09-09 09:53:54 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/7ccaecd33a30905e3929d43c8164b16bbb101b73

tdf#157138: Can't switch from Use Background to None area fill

It will be available in 7.6.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-09-12 07:28:46 UTC
Julien Nabet committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/edb6b8d715f603af544495df06bb6011d299bbf3

tdf#157138: Can't switch from Use Background to None area fill

It will be available in 7.5.7.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 stragu 2023-09-12 09:15:14 UTC
Thanks for the quick fix, Julien! Verified that both dialog and sidebar work well both ways in:

Version: 24.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: cea165a3ebdb5f2a2b172004ff1b3848f303d78a
CPU threads: 8; OS: Linux 5.15; UI render: default; VCL: gtk3
Locale: en-AU (en_AU.UTF-8); UI: en-US
Calc: threaded