tdf#157138: Can't switch from Use Background to None area fill

Revert partly tdf#151260 fix

Change-Id: I4c052e2cd1cb41dc8bda4b388b46e4416e351434
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156669
(cherry picked from commit b69e14038288387b5f288a06821fb5df66dcf94e)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156733
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
(cherry picked from commit 7ccaecd33a30905e3929d43c8164b16bbb101b73)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/156741
Reviewed-by: Xisco Fauli <xiscofauli@libreoffice.org>